mdd-backend/src/main/java/com/example/mdd_backend/errors/exceptions/BusinessLogicException.java
package com.example.mdd_backend.errors.exceptions;

public class BusinessLogicException extends RuntimeException {
    public BusinessLogicException(String message) {
        super(message);
    }
}
